(library
 (name eio_extended)
 (public_name eio-extended)
 (flags :standard -w +a-4-40-41-42-44-45-48-66 -warn-error +a)
 (libraries eio)
 (lint
  (pps ppx_js_style -check-doc-comments))
 (preprocess
  (pps
   -unused-code-warnings=force
   ppx_compare
   ppx_enumerate
   ppx_hash
   ppx_here
   ppx_let
   ppx_sexp_conv
   ppx_sexp_value)))
