(library
 (name eio_extended_test)
 (public_name eio-extended-tests.eio_extended_test)
 (flags
  :standard
  -w
  +a-4-40-41-42-44-45-48-66
  -warn-error
  +a
  -open
  Base
  -open
  Expect_test_helpers_base)
 (libraries
  base
  eio
  eio-extended
  eio_extended
  eio_main
  expect_test_helpers_core.expect_test_helpers_base
  fpath)
 (inline_tests)
 (lint
  (pps ppx_js_style -check-doc-comments))
 (preprocess
  (pps
   -unused-code-warnings=force
   ppx_compare
   ppx_enumerate
   ppx_expect
   ppx_hash
   ppx_here
   ppx_let
   ppx_sexp_conv
   ppx_sexp_value)))
